<resources>
    <string name="app_name">Foody170331.1</string>
    <string name="home">Home</string>
    <string name="collection">Collection</string>
    <string name="search">Search</string>
    <string name="notifications">Notifications</string>
    <string name="account">Account</string>
    <string name="decs">image button</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="where">Ở đâu</string>
    <string name="what">Ăn gì</string>
    <string name="latest">Mới nhất</string>
    <string name="nearby">Gần tôi</string>
    <string name="for_tourist">Du Khách</string>
    <string name="most_reviewed">Phổ biến</string>
    <string name="e_card">Ưu đãi E-card</string>
    <string name="reservation">Đặt chỗ</string>
    <string name="bank_card">Ưu đãi thẻ</string>
    <string name="order_delivery">Đặt giao hàng</string>
    <string name="categories">Danh mục</string>
    <string name="city">TP.HCM</string>
    <string name="cancel_action">Hủy</string>
    <string name="change_city">Đổi tỉnh thành</string>
    <string name="dont_find_restaurant">Chưa có địa điểm nào</string>
    <string name="auto_location">Tự động xác định vị trí</string>
    <string name="search_hint">Tìm nhanh</string>
    <string name="vietnam">Vietnam</string>
    <string name="change_country">Đổi quốc gia</string>
    <string name="choose_city">Chọn Tỉnh/Thành phố</string>
    <string name="completed">Xong</string>
    <string name="city_default">Mặc định</string>
    <string name="order"><![CDATA[Đặt hàng & Đặt chỗ]]></string>
    <string name="discover">Khám phá</string>
    <string name="reservations">Đặt chỗ ưu đãi</string>
    <string name="quet_ma_coupon">Quét mã coupon</string>
    <string name="dang_anh">Đăng ảnh</string>
    <string name="check_in">Check in</string>
    <string name="viet_binh_luan">Viết bình luận</string>
    <string name="them_dia_diem">Thêm địa điểm</string>

    <string name="log_out">Bạn có muốn đăng xuất khỏi Foody?</string>
    <string name="er_connect">Kết nối không thành công.\n Có thể tín hiệu mạng không tốt\n hoặc hệ thống đang bận xử lý!</string>
    <string name="not_found">Chưa có địa điểm nào.</string>
    <string name="gps_network_not_enabled">Bạn nên bật Dịch vụ Định vị để Foody có thể tìm kiếm các địa điểm gần bạn.</string>
    <string name="open_location_settings">có</string>
    <string name="cancel">không</string>
    <string name="coupon">Coupon</string>
    <string name="close">Đóng</string>
    <string name="dat_cho">Đặt chỗ ưu đãi</string>
    <string name="game_amp_fun"><![CDATA[Game & Fun]]></string>
    <string name="binh_luan">Bình luận</string>
    <string name="blogs">Blogs</string>
    <string name="top_thanh_vien">Top thành viên</string>
    <string name="video">Video</string>
    <string name="signout">Đăng xuất</string>
</resources>
