<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <!--Dong 1-->
    <LinearLayout
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginRight="8dp"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp"
            android:background="@drawable/bgr_menu_main">
            <ImageView
                android:src="@drawable/ic_nearby"
                android:layout_width="23dp"
                android:layout_height="23dp" />
            <TextView
                android:textSize="@dimen/text_size_tab_header"
                android:text="@string/nearby"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp"
            android:background="@drawable/bgr_menu_main">
            <ImageView
                android:src="@drawable/ic_ecoupon"
                android:layout_width="23dp"
                android:layout_height="23dp" />
            <TextView
                android:textSize="@dimen/text_size_tab_header"
                android:text="@string/coupon"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
    <!--Dong 2-->
    <LinearLayout
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginRight="8dp"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp"
            android:background="@drawable/bgr_menu_main">
            <ImageView
                android:src="@drawable/ic_dat_cho_uu_dai"
                android:layout_width="23dp"
                android:layout_height="23dp" />
            <TextView
                android:textSize="@dimen/text_size_tab_header"
                android:text="@string/dat_cho"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp"
            android:background="@drawable/bgr_menu_main">
            <ImageView
                android:src="@drawable/dn_ic_more_delivery"
                android:layout_width="23dp"
                android:layout_height="23dp" />
            <TextView
                android:textSize="@dimen/text_size_tab_header"
                android:text="@string/order_delivery"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
    <!--Dong 3-->
    <LinearLayout
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginRight="8dp"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp"
            android:background="@drawable/bgr_menu_main">
            <ImageView
                android:src="@drawable/ic_ecard"
                android:layout_width="23dp"
                android:layout_height="23dp" />
            <TextView
                android:textSize="@dimen/text_size_tab_header"
                android:text="@string/e_card"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp"
            android:background="@drawable/bgr_menu_main">
            <ImageView
                android:src="@drawable/ic_game"
                android:layout_width="23dp"
                android:layout_height="23dp" />
            <TextView
                android:textSize="@dimen/text_size_tab_header"
                android:text="@string/game_amp_fun"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
    <!--Dong 4-->
    <LinearLayout
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginRight="8dp"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp"
            android:background="@drawable/bgr_menu_main">
            <ImageView
                android:src="@drawable/ic_icon_binhluanmoi"
                android:layout_width="23dp"
                android:layout_height="23dp" />
            <TextView
                android:textSize="@dimen/text_size_tab_header"
                android:text= "@string/binh_luan"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp"
            android:background="@drawable/bgr_menu_main">
            <ImageView
                android:src="@drawable/ic_blogs"
                android:layout_width="23dp"
                android:layout_height="23dp" />
            <TextView
                android:textSize="@dimen/text_size_tab_header"
                android:text="@string/blogs"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
    <!--Dong 5-->
    <LinearLayout
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginRight="8dp"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp"
            android:background="@drawable/bgr_menu_main">
            <ImageView
                android:src="@drawable/ic_icon_topthanhvien"
                android:layout_width="23dp"
                android:layout_height="23dp" />
            <TextView
                android:textSize="@dimen/text_size_tab_header"
                android:text= "@string/top_thanh_vien"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp"
            android:background="@drawable/bgr_menu_main">
            <ImageView
                android:src="@drawable/ic_video"
                android:layout_width="23dp"
                android:layout_height="23dp" />
            <TextView
                android:textSize="@dimen/text_size_tab_header"
                android:text="@string/video"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>