<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragmen_menu_bottom"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
    <LinearLayout
        android:id="@+id/ln1"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="9"
            android:paddingLeft="16dp"
            android:scaleType="fitStart"
            android:src="@drawable/ic_ecoupon"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:textStyle="normal"
            android:gravity="center|left"
            android:text="@string/quet_ma_coupon"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ln2"
        android:layout_width="match_parent"
        android:clickable="true"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="9"
            android:paddingLeft="16dp"
            android:scaleType="fitStart"
            android:src="@drawable/icon_home_upload_image"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:textStyle="normal"
            android:gravity="center|left"
            android:text="@string/dang_anh"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ln3"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="9"
            android:paddingLeft="16dp"
            android:scaleType="fitStart"
            android:src="@drawable/icon_home_checkin"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:textStyle="normal"
            android:gravity="center|left"
            android:text="@string/check_in"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ln4"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="9"
            android:paddingLeft="16dp"
            android:scaleType="fitStart"
            android:src="@drawable/icon_home_review"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:textStyle="normal"
            android:gravity="center|left"
            android:text="@string/viet_binh_luan"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ln5"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="9"
            android:paddingLeft="16dp"
            android:scaleType="fitStart"
            android:src="@drawable/icon_home_add_new_place"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textStyle="normal"
            android:layout_weight="2"
            android:gravity="center|left"
            android:text="@string/them_dia_diem"/>

    </LinearLayout>


</LinearLayout>